<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="server">SERVER</string>
    <string name="server_port">Server port</string>
    <string name="connect">Connect</string>
    <string name="client">CLIENT</string>
    <string name="server_address">Server address</string>
    <string name="client_server_port">Server port</string>
    <string-array name="information_types">
        <item>EUR</item>
        <item>USD</item>
    </string-array>
</resources>